Fix: Center alignment of button text

--- a/css/style.css
+++ b/css/style.css
@@ -1199,6 +1199,9 @@ select { cursor: pointer; }
 #login-btn {
   width: 100%;
   height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-forgot {
